--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 
 body {
   box-sizing: border-box;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: #474141;
 }
 
 .container-centered {
@@ -15,7 +16,8 @@ body {
   font-family: "Cabin", sans-serif;
   font-size: 18px;
   line-height: 1.5;
-  background-color: #ffffff;
+  background-color: #84bb8d;
+  /* background-color: #ffffff; */
   box-shadow: 10px 10px 40px -1px rgba(0, 0, 0, 0.23);
 }
 
